--- a/index.html
+++ b/index.html
@@ -5,22 +5,89 @@
     <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maria Elena Restaurant</title>
-    <header>
-        <div class="main-text">
-            <h1>Experience some of the best seafood in town.</h1>
-            <a href="#">Menu items</a>
-            <a href="#">About Us</a>
-        </div>
-    </header>   
 </head>
+<header>
+    <nav>
+        <div class="row">
+            <img class="logo" src="https://png.icons8.com/ship-wheel/dotty/92/ffffff" alt="logo">
+            <ul class="main-nav">
+                <li>
+                    <a href="#">Menu Items</a>
+                </li>
+                <li>
+                    <a href="#">Our Cities</a>
+                </li>
+                <li>
+                    <a href="#">About Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="main-text">
 
+        <h1>Experience the best seafood in town.</h1>
+        <a class="btn btn-full" href="#">Menu items</a>
+        <a class="btn btn-ghost" href="#">About Us</a>
+    </div>
+   
+</header>
 <body>
+<section class="features">
+    <div class="row">
+        <h2>We cater</h2>
+        <p class="long-copy">
+            You don't have to come to us. We will come to you. Just give us a 48 hour notice and we will take care of everything. We
+            can cater anywhere from a party of 10 to a party of 200.
+        </p>
+    </div>
+    <div class="row">
+        <div class="col span_1_of_4">
+            <h3>Up to 365 days a year</h3>
+            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
+                door.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col span_1_of_4">
+            <h3>Ready in 20 min</h3>
+            <p>Your are only 20 minutes away from tasting some of the best prepared food we have to offer.
+                It really is as simple as that.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col span_1_of_4">
+            <h3>Up to 365 days a year</h3>
+            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
+                door.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col span_1_of_4">
+            <h3>Up to 365 days a year</h3>
+            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
+                door.
+            </p>
+        </div>
+    </div>
+
+
+
+</section>
+
+
+
 
 </body>
+<footer>
+    <a href="https://icons8.com">Icon pack by Icons8</a>
+</footer>
 
 </html>
