--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +18,7 @@
             <img class="logo" src="https://png.icons8.com/ship-wheel/dotty/92/ffffff" alt="logo">
             <ul class="main-nav">
                 <li>
-                    <a href="#">Menu Items</a>
+                    <a href="#">Our dishes</a>
                 </li>
                 <li>
                     <a href="#">Our Cities</a>
@@ -39,14 +40,15 @@
 <body>
 <section class="features">
     <div class="row">
-        <h2>We cater</h2>
+        <h2>We bring the party to you</h2>
         <p class="long-copy">
             You don't have to come to us. We will come to you. Just give us a 48 hour notice and we will take care of everything. We
             can cater anywhere from a party of 10 to a party of 200.
         </p>
     </div>
     <div class="row">
-        <div class="col span_1_of_4">
+        <div class="col span_1_of_4 box">
+                <i class="ion-calendar icon-big"></i>
             <h3>Up to 365 days a year</h3>
             <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
                 door.
@@ -54,7 +56,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col span_1_of_4">
+        <div class="col span_1_of_4 box">
+                <i class="ion-android-time icon-big"></i>
             <h3>Ready in 20 min</h3>
             <p>Your are only 20 minutes away from tasting some of the best prepared food we have to offer.
                 It really is as simple as that.
@@ -62,18 +65,20 @@
         </div>
     </div>
     <div class="row">
-        <div class="col span_1_of_4">
-            <h3>Up to 365 days a year</h3>
-            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
-                door.
+        <div class="col span_1_of_4 box">
+                <i class="ion-ios-nutrition-outline icon-big"></i>
+            <h3>Organic</h3>
+            <p>We take great pride in assuring our products are made with 
+                only the best ingredients.
             </p>
         </div>
     </div>
     <div class="row">
-        <div class="col span_1_of_4">
-            <h3>Up to 365 days a year</h3>
-            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
-                door.
+        <div class="col span_1_of_4 box">
+                <i class="ion-iphone icon-big"></i>
+            <h3>Convenience</h3>
+            <p>Our mobile app makes it easier than ever to get what you want
+                when you want it.
             </p>
         </div>
     </div>
@@ -81,13 +86,46 @@
 
 
 </section>
-
-
-
+<section class="meals-section">
+<div class="meals-showcase">
+    <ul>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish1.jpg" alt="dish1">
+                    </figure>
+        </li>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish2.jpg" alt="dish2">
+                    </figure>
+        </li>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish3.jpg" alt="dish3">
+                    </figure>
+        </li>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish4.jpg" alt="dish4">
+                    </figure>
+        </li>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish5.jpg" alt="dish5">
+                    </figure>
+        </li>
+        <li>
+                <figure class="meal-photo">
+                        <img src="resources/images/dish6.jpg" alt="dish6">
+                    </figure>
+        </li>
+    </ul>
+</div>
+</section>
 
 </body>
-<footer>
+<!-- <footer>
     <a href="https://icons8.com">Icon pack by Icons8</a>
-</footer>
+</footer> -->
 
 </html>
