feature section added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="resources/css/grid.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
@@ -35,96 +35,124 @@
         <a class="btn btn-full" href="#">Menu items</a>
         <a class="btn btn-ghost" href="#">About Us</a>
     </div>
-   
+
 </header>
+
 <body>
-<section class="features">
-    <div class="row">
-        <h2>We bring the party to you</h2>
-        <p class="long-copy">
-            You don't have to come to us. We will come to you. Just give us a 48 hour notice and we will take care of everything. We
-            can cater anywhere from a party of 10 to a party of 200.
-        </p>
-    </div>
-    <div class="row">
-        <div class="col span_1_of_4 box">
+    <section class="features">
+
+        <div class="row">
+            <h2>We bring the party to you</h2>
+            <p class="long-copy">
+                You don't have to come to us. We will come to you. Just give us a 48 hour notice and we will take care of everything. We
+                can cater anywhere from a party of 10 to a party of 200.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
                 <i class="ion-calendar icon-big"></i>
-            <h3>Up to 365 days a year</h3>
-            <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
-                door.
-            </p>
+                <h3>Up to 365 days a year</h3>
+                <p>Never cook again. No, we really mean it. With our subscription service we can deliver prepared meals to your
+                    door.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col span_1_of_4 box">
+        <div class="row">
+            <div class="col span_1_of_4 box">
                 <i class="ion-android-time icon-big"></i>
-            <h3>Ready in 20 min</h3>
-            <p>Your are only 20 minutes away from tasting some of the best prepared food we have to offer.
-                It really is as simple as that.
-            </p>
+                <h3>Ready in 20 min</h3>
+                <p>Your are only 20 minutes away from tasting some of the best prepared food we have to offer. It really is
+                    as simple as that.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col span_1_of_4 box">
+        <div class="row">
+            <div class="col span_1_of_4 box">
                 <i class="ion-ios-nutrition-outline icon-big"></i>
-            <h3>Organic</h3>
-            <p>We take great pride in assuring our products are made with 
-                only the best ingredients.
-            </p>
+                <h3>Organic</h3>
+                <p>We take great pride in assuring our products are made with only the best ingredients.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col span_1_of_4 box">
+        <div class="row">
+            <div class=" col span_1_of_4 box">
                 <i class="ion-iphone icon-big"></i>
-            <h3>Convenience</h3>
-            <p>Our mobile app makes it easier than ever to get what you want
-                when you want it.
-            </p>
+                <h3>Convenience</h3>
+                <p>Our mobile app makes it easier than ever to get what you want when you want it.
+                </p>
+            </div>
         </div>
-    </div>
 
 
 
-</section>
-<section class="meals-section">
-<div class="meals-showcase">
-    <ul>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish1.jpg" alt="dish1">
-                    </figure>
-        </li>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish2.jpg" alt="dish2">
-                    </figure>
-        </li>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish3.jpg" alt="dish3">
-                    </figure>
-        </li>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish4.jpg" alt="dish4">
-                    </figure>
-        </li>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish5.jpg" alt="dish5">
-                    </figure>
-        </li>
-        <li>
-                <figure class="meal-photo">
-                        <img src="resources/images/dish6.jpg" alt="dish6">
-                    </figure>
-        </li>
-    </ul>
-</div>
-</section>
+    </section>
+
+    <section class="meals-section">
+        <ul class="meals-showcase">
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish1.jpg" alt="dish4">
+                </figure>
+            </li>
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish2.jpg" alt="dish4">
+                </figure>
+            </li>
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish3.jpg" alt="dish4">
+                </figure>
+            </li>
+        </ul>
+        <ul class="meals-showcase">
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish4.jpg" alt="dish4">
+                </figure>
+            </li>
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish7.jpg" alt="dish4">
+                </figure>
+            </li>
+            <li>
+                <figure class="dish">
+                    <img src="resources/images/dish6.jpg" alt="dish4">
+                </figure>
+            </li>
+        </ul>
+    </section>
+    <section class="section-steps">
+        <div class="row">
+            <h2>How it works. Simple as 1, 2, 3
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_2 steps-box">
+                <img class="app-screen" src="resources/images/phone.png" alt="phone image">
+            </div>
+            <div class="col span_1_of_2 steps-box">
+                <div class="steps">
+                    <div>1</div>
+                    <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+                </div>
+                <div class="steps">
+                    <div>2</div>
+                    <p>Order our delicious meals conveniently using our mobile app.</p>
+                </div>
+                <div class="steps">
+                    <div>3</div>
+                    <p>Enjoy our professionaly prepped meals in less than 20 minuntes.</p>
+                </div>
+                <a class="btn-app" href="a"><img src="resources/images/appstore.png" alt="apple store button"></a>
+                <a class="btn-app" href="a"><img src="resources/images/gstore.png" alt="google store button"></a>
+            </div>
+        </div>
+    </section>
 
 </body>
-<!-- <footer>
+<!-- <footer class="row">
     <a href="https://icons8.com">Icon pack by Icons8</a>
 </footer> -->
 
