--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </header>
 
 <body>
-    <section class="features">
+    <section class="features ">
 
         <div class="row">
             <h2>We bring the party to you</h2>
@@ -105,7 +105,7 @@
                 </figure>
             </li>
         </ul>
-        <ul class="meals-showcase">
+        <ul class="meals-showcase ">
             <li>
                 <figure class="dish">
                     <img src="resources/images/dish4.jpg" alt="dish4">
@@ -123,7 +123,7 @@
             </li>
         </ul>
     </section>
-    <section class="section-steps">
+    <section class="section-steps clearfix">
         <div class="row">
             <h2>How it works. Simple as 1, 2, 3
             </h2>
@@ -145,12 +145,233 @@
                     <div>3</div>
                     <p>Enjoy our professionaly prepped meals in less than 20 minuntes.</p>
                 </div>
-                <a class="btn-app" href="a"><img src="resources/images/appstore.png" alt="apple store button"></a>
-                <a class="btn-app" href="a"><img src="resources/images/gstore.png" alt="google store button"></a>
+                <a class="btn-app" href="a">
+                    <img src="resources/images/appstore.png" alt="apple store button">
+                </a>
             </div>
         </div>
     </section>
+    <section class="section-cities">
+        <div class="row">
+            <h2>We're currently in these cities
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="resources/images/denver.jpg" alt="city of Denver">
+                <h3>Denver</h3>
+                <div class="city-feature">
+                    <i class="ion-person icon-small"></i>
+                    1000+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                    @Maria_Elena_D
+                </div>
+                <div class="city-feature">
+                    <i class="ion-star icon-small"></i>
+                    50+ Top Chefs
+                </div>
 
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="resources/images/sanFrancisco.jpg" alt="city of Denver">
+                <h3>San Francisco</h3>
+                <div class="city-feature">
+                    <i class="ion-person icon-small"></i>
+                    900+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                    @Maria_Elena_SF
+                </div>
+                <div class="city-feature">
+                    <i class="ion-star icon-small"></i>
+                    60+ Top Chefs
+                </div>
+
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="resources/images/Chicago.jpg" alt="city of Denver">
+                <h3>Chicago</h3>
+                <div class="city-feature">
+                    <i class="ion-person icon-small"></i>
+                    800+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                    @Maria_Elena_C
+                </div>
+                <div class="city-feature">
+                    <i class="ion-star icon-small"></i>
+                    30+ Top Chefs
+                </div>
+
+            </div>
+
+        </div>
+        <div class="row">
+            <div class="col span_1_of_4 box">
+                <img src="resources/images/seattle.jpg" alt="city of Denver">
+                <h3>Seattle</h3>
+                <div class="city-feature">
+                    <i class="ion-person icon-small"></i>
+                    1200+ happy eaters
+                </div>
+                <div class="city-feature">
+                    <i class="ion-social-twitter icon-small"></i>
+                    @Maria_Elena_S
+                </div>
+                <div class="city-feature">
+                    <i class="ion-star icon-small"></i>
+                    70+ Top Chefs
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <section class="section-testimonials clearfix">
+        <div class="row">
+            <h2>See what our customers are saying.
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_3">
+                <blockquote>
+                    Maria Elena is a wonderfull and authentic restaurant. I love their ambiance, attention to detail and incedible customer service.
+                    My friends and I absolutley love going here.
+                    <cite class="testimonial-pics">
+                        <img src="resources/images/client1.jpg" alt="customer photo">Rebbeca Anton</cite>
+                </blockquote>
+            </div>
+            <div class="col span_1_of_3">
+                <blockquote>
+                    I have had a party catered by them and I could not have been happier with their service. They were so helpful in getting
+                    everything set up and the guests could not have been happier with the food.
+                    <cite class="testimonial-pics">
+                        <img src="resources/images/client2.jpg" alt="customer photo">Sarah Townsend</cite>
+                </blockquote>
+            </div>
+            <div class="col span_1_of_3">
+                <blockquote>
+                    Authentic, delicious, and courteous. You could not ask for a better place to have a meal with the people you love.
+                    <cite class="testimonial-pics">
+                        <img src="resources/images/client3.jpg" alt="customer photo">Eric Gonzalez</cite>
+                </blockquote>
+            </div>
+        </div>
+
+    </section>
+    <section class="section-plans clearfix">
+        <div class="row">
+            <h2>Start eating healthy today
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col span_1_of_3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Premium</h3>
+                        <p class="plan-price">
+                            $399
+                            <span>/ month</span>
+                        </p>
+                        <p class="price-per-meal">That's only $13.30 per meal</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>1 meal everyday
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Order 24/7
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Free delivery
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Access to newest <span>creations</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="a" class="btn btn-full">Sign up now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span_1_of_3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Pro</h3>
+                        <p class="plan-price">
+                            $149
+                            <span>/ month</span>
+                        </p>
+                        <p class="price-per-meal">That's only $14.90 per meal</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>1 meal everyday
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Order 24/7
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Free delivery
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Access to newest <span>creations</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="a" class="btn btn-ghost">Sign up now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span_1_of_3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Starter</h3>
+                        <p class="plan-price">
+                            $19
+                            <span>/ month</span>
+                        </p>
+                        <p class="price-per-meal">&nbsp;</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>1 meal
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Order 8am - 12pm
+                            </li>
+                            <li>
+                                <i class="ion-checkmark-round icon-small"></i>Free delivery
+                            </li>
+                            <li>
+                                <i class="ion-close-round icon-small"></i>Access to newest <span>creations</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="a" class="btn btn-ghost">Sign up now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
 </body>
 <!-- <footer class="row">
     <a href="https://icons8.com">Icon pack by Icons8</a>
