--- a/index.html
+++ b/index.html
@@ -372,6 +372,9 @@
 
 
     </section>
+    <section class="section-contact">
+        
+    </section>
 </body>
 <!-- <footer class="row">
     <a href="https://icons8.com">Icon pack by Icons8</a>
