new windows for links

--- a/index.html
+++ b/index.html
@@ -501,11 +501,11 @@
         </div>
         <div class="row">
             <p>Images provided by
-                <a href="https://unsplash.com">UnSplash</a>
+                <a target="_blank" href="https://unsplash.com">UnSplash</a>
             </p>
             <p>Copyright &copy; Maria Elena 2017</p>
             <p>Icons provided by
-                <a href="https://icons8.com">Icons8</a>
+                <a target="_blank" href="https://icons8.com">Icons8</a>
             </p>
         </div>
 
