--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 
     </footer>
 </section>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="resources/js/jquery-3.2.1.min.js"></script>
 <script src="resources/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/main.js"></script>
 </body>
