--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_4 box">
-                        <img src="resources/images/denver.jpg" alt="city of Denver">
+                        <img src="resources/images/denver.jpg" alt="City of Denver">
                         <h3>Denver</h3>
                         <div class="city-feature">
                             <i class="ion-person icon-small"></i>
@@ -194,7 +194,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_4 box">
-                        <img src="resources/images/sanFrancisco.jpg" alt="city of Denver">
+                        <img src="resources/images/sanFrancisco.jpg" alt="Image of the city of San Francisco">
                         <h3>San Francisco</h3>
                         <div class="city-feature">
                             <i class="ion-person icon-small"></i>
@@ -214,7 +214,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_4 box">
-                        <img src="resources/images/Chicago.jpg" alt="city of Denver">
+                        <img src="resources/images/chicago.jpg" alt="Image of the city of Chicago">
                         <h3>Chicago</h3>
                         <div class="city-feature">
                             <i class="ion-person icon-small"></i>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="row">
                     <div class="col span_1_of_4 box">
-                        <img src="resources/images/seattle.jpg" alt="city of Denver">
+                        <img src="resources/images/seattle.jpg" alt="Image of the city of Seattle">
                         <h3>Seattle</h3>
                         <div class="city-feature">
                             <i class="ion-person icon-small"></i>
