smooth scrolling added

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 
             </section>
         </div>
-        <div class="section">
-            <section class="meals-section" id="dishes">
+
+            <section id="dishes" class="meals-section js--meals-section">
 
                 <ul class="meals-showcase">
                     <li>
@@ -135,7 +135,7 @@
                 </ul>
 
             </section>
-        </div>
+        
         <div id="how" class="section">
             <section class="section-steps clearfix">
                 <div class="row">
